# TGSC

./: .gitignore  .pre-commit-config.yaml  Layouts.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: 1. Random networks generation.ipynb  2. Networks layouts.ipynb  requirements.txt
