[tool.poetry]
name = "tgsc"
version = "0.1.0"
description = ""
authors = ["Stanislaw Gizinski <s.gizinski84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pre-commit = "^2.7.1"
networkx = "^2.5"
matplotlib = "^3.3.2"
scipy = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
